--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "hastebin-gen": "^2.0.5"
+    "hastebin-gen": "^2.0.5",
+    "mongoose": "^5.11.16"
   },
   "devDependencies": {},
   "repository": {
